# prac-7

Task_1/: .WorkMod.cxx.swp  .WorkMod.h.swp  Addons.xcu  CalcWindowState.xcu  Makefile  MyProtocolHandler.cxx  WorkMod.cxx  WorkMod.h  WriterWindowState.xcu  description.xml
Task_2/: CMakeLists.txt  Generator.cpp  a  csv_mod.h  main.cpp  mutation.h  simulation.h  solution.h  temperature.h
Task_3/: CMakeLists.txt  Test.cpp  library.cpp  library.h  main.cpp
